--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr" class="translated-ltr">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Twitter Card-->
+    <meta name="twitter:title" content="💻 NGOYA LEONEL️ 🌴️">
+    <meta name="twitter:site" content="@ln_dev7">
+    <meta name="twitter:creator" content="@ln_dev7">
+    <meta name="twitter:description" content="Développeur FrontEnd">
+    <meta name="twitter:image" content="img/ln.png">
+    <meta name="twitter:card" content="img/lndev.png">
+    <meta name="description" content="Développeur FrontEnd">
+    <meta name="keywords" content="LN Developemrnt, NGOYA, Leonel, Développeur Freelance, Développeur Web, Camerounais">
+    <!--Open Graph-->
+    <meta property="og:image" content="img/ln.png">
+    <meta property="og:title" content="💻 NGOYA LEONEL️ 🌴️">
+    <meta property="og:description" content="Je développe les applications web et android, de la manière la plus créative possible:">
+    <meta name="author" content="NGOYA Leonel">
+    <meta property="og:url" content="https://lndev.com/">
+    <meta property="og:site_name" content="💻 NGOYA LEONEL️ 🌴">
+    <meta property="og:type" content="website">
+
+    <title>NGOYA Leonel • Développeur FrontEnd</title>
+    
+    <link rel="icon" sizes="76x76" href="img/icon.png">
+    <!-- Font Awesome Icons -->
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.css" rel="stylesheet">
+                        <!-- 
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-linkedin"></i>
+                            <i class="fab fa-github"></i>
+                            <i class="fab fa-instagram"></i> 
+
+                            <iframe src="https://open.spotify.com/playlist/1fciPOQsvJFvA22F9PeEOU?si=b662fb6de63c4426"></iframe>
+                        -->
 </head>
-<body>
+<body> 
     
 </body>
 </html>
