ajout du loader au chargement de la page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" class="translated-ltr">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,23 +23,27 @@
     <meta property="og:url" content="https://lndev.com/">
     <meta property="og:site_name" content="💻 NGOYA LEONEL️ 🌴">
     <meta property="og:type" content="website">
-
+    <!-- Title -->
     <title>NGOYA Leonel • Développeur FrontEnd</title>
-    
+    <!-- Page Icon -->
     <link rel="icon" sizes="76x76" href="img/icon.png">
     <!-- Font Awesome Icons -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="assets/css/font-awesome.css" rel="stylesheet">
-                        <!-- 
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-linkedin"></i>
-                            <i class="fab fa-github"></i>
-                            <i class="fab fa-instagram"></i> 
-
-                            <iframe src="https://open.spotify.com/playlist/1fciPOQsvJFvA22F9PeEOU?si=b662fb6de63c4426"></iframe>
-                        -->
+    <!-- Ionicon -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <!-- CSS Local -->
+    <link rel="stylesheet" href="index.css">
+    <!-- JS Local -->
+    <script src="JS/app.js" defer></script>
+    <script src="JS/loader.js" defer></script>
 </head>
-<body> 
-    
+<body>
+    <div class="loader"> 
+        <span class="loader-load"></span>       
+    </div>
 </body>
 </html>
+
+<!-- <iframe src="https://open.spotify.com/embed/playlist/1fciPOQsvJFvA22F9PeEOU" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
