debut du header et du nav

--- a/index.html
+++ b/index.html
@@ -26,22 +26,60 @@
     <!-- Title -->
     <title>NGOYA Leonel • Développeur FrontEnd</title>
     <!-- Page Icon -->
-    <link rel="icon" sizes="76x76" href="img/icon.png">
-    <!-- Font Awesome Icons -->
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.css" rel="stylesheet">
+    <link rel="icon" sizes="76x76" href="img/logo.png">
     <!-- Ionicon -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <!-- CSS Local -->
     <link rel="stylesheet" href="index.css">
     <!-- JS Local -->
-    <script src="JS/app.js" defer></script>
     <script src="JS/loader.js" defer></script>
+    <script src="JS/toggleMode.js" defer></script>
 </head>
 <body>
     <div class="loader"> 
         <span class="loader-load"></span>       
+    </div>
+
+    <nav class="navigation">
+        <a href="index.html" class="navigation-logo">< Leonel Ngoya /></a>
+        <ul class="navigation-page">
+            <li><a href="#about">Moi</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#experience">Expericence</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#skillest">Skills</a></li>
+            <li><a href="#other">Autres</a></li>
+        </ul>
+        <ul class="navigation-socials">
+            <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
+            <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
+            <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+            <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+            <li><a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+        </ul>
+    </nav>
+
+    <header class="header">
+        <div class="containers">
+            <div class="header-img">
+                <img src="img/ln.png" alt="">
+            </div>
+            <div class="header-container">
+                <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
+                <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
+                <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant ...</h2>
+            </div>
+  
+        </div>
+
+    </header>
+
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dolorem deserunt ipsam culpa rerum earum. Repellat sunt, temporibus accusamus enim quaerat quo dolorem magnam reiciendis dolore consequuntur. Sed dolorem odit, amet labore adipisci iure obcaecati laboriosam, repellendus laborum enim odio sit illum possimus pariatur ut suscipit dolorum itaque. Amet distinctio voluptates, quaerat similique, tempora autem explicabo natus voluptatem non reiciendis praesentium. Vero officia molestiae minus numquam sunt harum dolorum explicabo a quas, nisi quaerat placeat consequuntur autem modi necessitatibus quis quia voluptas qui non nihil quam! Sed ullam aut reiciendis reprehenderit maiores porro quibusdam deleniti? Nulla repellendus incidunt ea labore minima neque repudiandae reiciendis rem, vitae officiis eos minus non beatae iusto quia quas, deleniti nesciunt tempora temporibus! Suscipit error adipisci explicabo neque nisi! Nobis inventore, quaerat distinctio officiis non quasi illo suscipit, dolore adipisci est eius, sequi unde quia saepe. Accusantium nam, similique culpa omnis illum officia voluptatum. Neque perferendis iusto explicabo in, non distinctio quo corporis architecto, fugiat numquam est, quos vero deserunt nobis consectetur ea reiciendis. Illum, asperiores, in aliquam est ex veritatis mollitia excepturi eligendi assumenda sed quos quasi at odit vel. Accusantium veniam nemo suscipit, nulla, architecto fuga laborum ea earum vero cumque eaque distinctio, quaerat dolorem natus asperiores quidem aliquid itaque officia. Nisi aperiam quo nesciunt incidunt ipsa explicabo quisquam autem animi totam odio voluptate officiis, aspernatur, veritatis alias natus neque tempore quas at? Deserunt impedit autem, fugiat perspiciatis corporis harum natus optio alias non officia, nobis repellat magni assumenda, quisquam ut earum. Facilis atque et asperiores error maiores a sit enim praesentium, libero aut odio officiis neque fugiat iste quibusdam voluptatem delectus rem dolorum ab rerum laudantium possimus. Repellendus, impedit maxime expedita obcaecati eum atque quia doloribus facere. Provident unde omnis sint quisquam eos est maiores laboriosam dolor, voluptas vel rem culpa vitae itaque, incidunt ducimus ullam voluptatum in cumque sed adipisci inventore veritatis. Itaque, corporis animi, aspernatur magnam, perferendis quis adipisci illum minus distinctio voluptatum repudiandae debitis explicabo molestias ipsum vero est. Tempore, quisquam expedita. Deleniti voluptate unde fugiat, debitis ea eveniet repellendus ab amet id quae, doloremque officia iusto ex esse minima, eius possimus in tenetur sunt doloribus sint voluptatibus neque nam. Dicta ab eos optio amet odio perspiciatis nam quidem eaque. Tempora fugiat, beatae repellat corrupti perspiciatis eligendi reprehenderit. Dignissimos, modi, veniam optio, nostrum consequatur sapiente eius exercitationem voluptas alias quae pariatur accusantium qui numquam rem? Accusantium ullam repudiandae blanditiis, quas laudantium rem laboriosam ad. Ullam et itaque corrupti ea eveniet ipsum consequuntur aut, porro sapiente veritatis similique modi cupiditate nulla laborum sit, voluptas laboriosam magnam quibusdam, ipsam repellat. Autem ullam nemo aut eius aliquam, inventore debitis odit corrupti dolorem eveniet, aliquid, natus error hic ratione veniam eum illum! Officia nulla tenetur ullam, omnis natus sint fuga labore soluta corporis minima quia reprehenderit suscipit, molestias, expedita quisquam perferendis dolore nihil sed quaerat voluptatem explicabo vitae nesciunt enim! Beatae perferendis asperiores unde dolorum excepturi? Reiciendis quod, laboriosam explicabo, delectus ipsam vitae corporis nihil ad doloremque id commodi, amet saepe nemo ea. Non impedit vitae distinctio natus, illo maiores quae modi consectetur fugit aliquam perspiciatis eos porro possimus animi doloribus, voluptatem corporis vero veritatis assumenda repellat in. Porro neque nam cumque placeat officiis laboriosam aliquam eveniet voluptatibus sapiente iste ab quidem dignissimos quas similique non, mollitia at itaque perferendis, omnis cum et unde. Quasi possimus temporibus expedita voluptatum neque nihil a omnis eligendi est voluptatibus maxime aspernatur eos ipsum quisquam tempora, sunt unde quos hic, blanditiis fugit. Earum quia eaque ea cum asperiores hic magnam ullam! Ipsum sapiente maxime natus, neque ad doloribus. Voluptate perspiciatis aspernatur doloribus, vero cupiditate velit amet deserunt?
+
+    <div class="toggle-mode">
+        <ion-icon name="moon-outline"></ion-icon>
+        <ion-icon name="sunny-outline"></ion-icon>
     </div>
 </body>
 </html>
