responsive du header

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- JS Local -->
     <script src="JS/loader.js" defer></script>
     <script src="JS/toggleMode.js" defer></script>
+    <script src="JS/navigation.js"></script>
 </head>
 <body>
     <div class="loader"> 
@@ -43,6 +44,26 @@
 
     <nav class="navigation">
         <a href="index.html" class="navigation-logo">< Leonel Ngoya /></a>
+        <div class="navigation-burger">
+            <div class="navigation-burger-line"></div>
+       </div>
+       <ul class="navigation-menu">
+            <li><a href="index.html" class="navigation-logo">< Leonel Ngoya /></a></li>
+            <hr>
+            <li><a href="#about">Moi</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#experience">Expericence</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#skillest">Skills</a></li>
+            <li><a href="#other">Autres</a></li>
+            <hr>
+            <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
+            <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
+            <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+            <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+            <li><a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+        </ul>
+        </div>
         <ul class="navigation-page">
             <li><a href="#about">Moi</a></li>
             <li><a href="#services">Services</a></li>
@@ -70,7 +91,6 @@
                 <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
                 <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant.</h2>
             </div>
-  
         </div>
     </header>
 
