--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <!-- CSS Local -->
     <link rel="stylesheet" href="index.css">
     <!-- JS Local -->
-    <script src="JS/loader.js" defer></script>
-    <script src="JS/toggleMode.js" defer></script>
-    <script src="JS/navigation.js"></script>
+    <script src="Scripts/loader.js" defer></script>
+    <script src="Scripts/toggleMode.js" defer></script>
+    <script src="Scripts/navigation.js"></script>
 </head>
 <body>
     <div class="loader"> 
@@ -54,7 +54,7 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#experience">Expericence</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#skillest">Skills</a></li>
+            <li><a href="#skillest">Compétences</a></li>
             <li><a href="#other">Autres</a></li>
             <hr>
             <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
@@ -69,11 +69,11 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#experience">Expericence</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#skillest">Skills</a></li>
+            <li><a href="#skillest">Compétences</a></li>
             <li><a href="#other">Autres</a></li>
         </ul>
         <ul class="navigation-socials">
-            <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
+            <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline" alt="dasd"></ion-icon></a></li>
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
             <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
