finalisation navigation et header

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- JS Local -->
     <script src="Scripts/loader.js" defer></script>
     <script src="Scripts/toggleMode.js" defer></script>
-    <script src="Scripts/navigation.js"></script>
+    <script src="Scripts/navigation.js" defer></script>
 </head>
 <body>
     <div class="loader"> 
@@ -49,14 +49,12 @@
        </div>
        <ul class="navigation-menu">
             <li><a href="index.html" class="navigation-logo">< Leonel Ngoya /></a></li>
-            <hr>
             <li><a href="#about">Moi</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#experience">Expericence</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#skillest">Compétences</a></li>
             <li><a href="#other">Autres</a></li>
-            <hr>
             <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
