dark-mode du arrow

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <h2 class="about-hobbies-title">Loisirs</h2>
         <div class="about-hobbies">
             <h3>
-                Je m'intéresse beaucoup aux séries de réflexion et de suspens, comme sport j'aime pratiquer le volley-ball et beaucoup regarder le football.<br>
+                Je m'intéresse beaucoup aux séries de réflexion et de suspens, par ailleurs j'aime aussi beaucoup regarder le football. comme sport, je pratiquer le volley-ball.<br>
                 Comme la majorité des développeurs, pour coder j'adore les endroits calme avec une bonne musique, pour cela j'ai une playlist Spotify que j'écoute la plus part de mon temps.
             </h3>
             <iframe src="https://open.spotify.com/embed/playlist/1fciPOQsvJFvA22F9PeEOU" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media" class="about-hobbies-playlist"></iframe>
