debut de la partie education

--- a/index.html
+++ b/index.html
@@ -127,6 +127,68 @@
         </div>
     </div>
 
+    <div class="education" id="education">
+        <div class="education-cards">
+            <div class="eductaion-cards-title">
+                <h1>Mon éducation</h1>
+                <h2>Ici je vous présente mon parcours scolaire et académique.</h2>
+            </div>
+            <div class="education-cards-container">
+                <div class="education-cards-container-card">
+                    <div class="education-cards-container-card-img">
+                        <img src="img/3iac.png" alt="3IAC">
+                    </div>
+                    <div class="education-cards-container-card-container">
+                        <h5>2021 • <i>en cours</i></h5>
+                        <p class="ecucation-cards-container-card-container-description">
+                            <b>DEC (Diplôme d'études collégiales) TECHNOLOGIE DE L'INFORMATION ET DES COMMUNICATIONS (TIC)</b>
+                            <p>Institut Universitaire de la Côte • Douala</p>
+                            <p>Diplôme délivré par le Collège communautaire du Nouveau-Brunswick (CCNB-Canada)</p>
+                        </p>
+                    </div>
+                </div>
+                <div class="education-cards-container-card">
+                    <div class="education-cards-container-card-img">
+                        <img src="img/clirap.png" alt="Clirap">
+                    </div>
+                    <div class="education-cards-container-card-container">
+                        <h5>2020 • 2021</h5>
+                        <p class="ecucation-cards-container-card-container-description">
+                            <b>B2 - LANGUE ITALIENNE</b>
+                            <p>Clirap Educationnal • Yaoundé</p>
+                            <p>Diplôme délivré par l' Université de Rome 3 ( en Italie )</p>
+                        </p>
+                    </div>
+                </div>
+                <div class="education-cards-container-card">
+                    <div class="education-cards-container-card-img">
+                        <img src="img/uy1.png" alt="UY1">
+                    </div>
+                    <div class="education-cards-container-card-container">
+                        <h5>2019 • 2020</h5>
+                        <p class="ecucation-cards-container-card-container-description">
+                            <b>INFORMATIQUE NIVEAU 1</b>
+                            <p>Université de Yaoundé 1 • Yaoundé</p>
+                        </p>
+                    </div>
+                </div>
+                <div class="education-cards-container-card">
+                    <div class="education-cards-container-card-img">
+                        <img src="img/lybibaf-ndg.png" alt="Lybibaf Ndiengdam">
+                    </div>
+                    <div class="education-cards-container-card-container">
+                        <h5>2018 • 2019</h5>
+                        <p class="ecucation-cards-container-card-container-description">
+                            <b>BACCALAUREAT C</b>
+                            <p>Lycée bilingue de Bafoussam ndiengdam • Bafoussam</p>
+                            <p>Diplôme délivré par le MINESEC</p>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <a href="#navigation" class="arrow">
         <ion-icon name="arrow-up-outline"></ion-icon>
     </a>
