--- a/index.html
+++ b/index.html
@@ -129,21 +129,21 @@
 
     <div class="education" id="education">
         <div class="education-cards">
-            <div class="eductaion-cards-title">
+            <div class="education-cards-title">
                 <h1>Mon éducation</h1>
                 <h2>Ici je vous présente mon parcours scolaire et académique.</h2>
             </div>
             <div class="education-cards-container">
                 <div class="education-cards-container-card">
                     <div class="education-cards-container-card-img">
-                        <img src="img/3iac.png" alt="3IAC">
+                        <img src="img/iuc.png" alt="Clirap">
                     </div>
                     <div class="education-cards-container-card-container">
-                        <h5>2021 • <i>en cours</i></h5>
+                        <h3>2021 • <i>en cours</i></h3>
                         <p class="ecucation-cards-container-card-container-description">
                             <b>DEC (Diplôme d'études collégiales) TECHNOLOGIE DE L'INFORMATION ET DES COMMUNICATIONS (TIC)</b>
                             <p>Institut Universitaire de la Côte • Douala</p>
-                            <p>Diplôme délivré par le Collège communautaire du Nouveau-Brunswick (CCNB-Canada)</p>
+                            <h4>Diplôme délivré par le Collège communautaire du Nouveau-Brunswick (CCNB-Canada)</h4>
                         </p>
                     </div>
                 </div>
@@ -152,11 +152,11 @@
                         <img src="img/clirap.png" alt="Clirap">
                     </div>
                     <div class="education-cards-container-card-container">
-                        <h5>2020 • 2021</h5>
+                        <h3>2020 • 2021</h3>
                         <p class="ecucation-cards-container-card-container-description">
                             <b>B2 - LANGUE ITALIENNE</b>
                             <p>Clirap Educationnal • Yaoundé</p>
-                            <p>Diplôme délivré par l' Université de Rome 3 ( en Italie )</p>
+                            <h4>Diplôme délivré par l' Université de Rome 3 ( en Italie )</h4>
                         </p>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                         <img src="img/uy1.png" alt="UY1">
                     </div>
                     <div class="education-cards-container-card-container">
-                        <h5>2019 • 2020</h5>
+                        <h3>2019 • 2020</h3>
                         <p class="ecucation-cards-container-card-container-description">
                             <b>INFORMATIQUE NIVEAU 1</b>
                             <p>Université de Yaoundé 1 • Yaoundé</p>
@@ -177,11 +177,11 @@
                         <img src="img/lybibaf-ndg.png" alt="Lybibaf Ndiengdam">
                     </div>
                     <div class="education-cards-container-card-container">
-                        <h5>2018 • 2019</h5>
+                        <h3>2018 • 2019</h3>
                         <p class="ecucation-cards-container-card-container-description">
                             <b>BACCALAUREAT C</b>
                             <p>Lycée bilingue de Bafoussam ndiengdam • Bafoussam</p>
-                            <p>Diplôme délivré par le MINESEC</p>
+                            <h4>Diplôme délivré par le MINESEC</h4>
                         </p>
                     </div>
                 </div>
