customisation du loader

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
 </head>
 <body>
     <div class="loader"> 
-        <span class="loader-load"></span>       
+        <div class="loader-load"></div>     
+        <!-- <div class="loader-bloc loader-left"></div> -->
+        <div class="loader-bloc loader-right"></div>  
     </div>
+
 
     <nav class="navigation" id="navigation">
         <a href="index.html" class="navigation-logo">< Leonel Ngoya /></a>
