debut partie sikills

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <script src="Scripts/toggleMode.js" defer></script>
 </head>
 <body>
+
     <div class="loader"> 
         <div class="loader-load"></div>     
         <!-- <div class="loader-bloc loader-left"></div> -->
         <div class="loader-bloc loader-right"></div>  
     </div>
-
 
     <nav class="navigation" id="navigation">
         <a href="index.html" class="navigation-logo">< Leonel Ngoya /></a>
@@ -52,10 +52,10 @@
        <ul class="navigation-menu">
             <li><a href="index.html" class="navigation-logo">< Leonel Ngoya /></a></li>
             <li><a href="#about">Moi</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#experience">Expericence</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#skillest">Compétences</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#experience">Expericence</a></li>
             <li><a href="#other">Autres</a></li>
             <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
@@ -66,10 +66,10 @@
         </div>
         <ul class="navigation-page">
             <li><a href="#about">Moi</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#experience">Expericence</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#skillest">Compétences</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#experience">Expericence</a></li>
             <li><a href="#other">Autres</a></li>
         </ul>
         <ul class="navigation-socials">
@@ -187,6 +187,40 @@
                             <h4>Diplôme délivré par le MINESEC</h4>
                         </p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="skillest" id="skillest">
+        <div class="skillest-cards">
+            <div class="skillest-cards-title">
+                <h1>Mes compétences</h1>
+                <h2>Ici vous verrez tout les languages et outils que j'utilise pour travailler.</h2>
+            </div>
+            <div class="skillest-cards-container">
+                <div class="skillest-cards-container-card">
+                    <ion-icon name="globe-outline"></ion-icon>
+                    DEVELOPPEMENT WEB
+                    <ion-icon name="logo-html5"></ion-icon>
+                    <ion-icon name="logo-css3"></ion-icon>
+                    <ion-icon name="logo-sass"></ion-icon>
+                    <ion-icon name="logo-javascript"></ion-icon>
+                    <ion-icon name="logo-react"></ion-icon>
+                </div>
+                <div class="skillest-cards-container-card">
+                    <ion-icon name="phone-portrait-outline"></ion-icon>
+                    DEVELOPPEMENT MOBILE
+                    <ion-icon name="logo-react"></ion-icon>
+                    <ion-icon name="logo-android"></ion-icon>
+                </div>
+                <div class="skillest-cards-container-card">
+                    <ion-icon name="laptop-outline"></ion-icon>
+                    AUTRES SKILLS
+                    <ion-icon name="logo-python"></ion-icon>
+                    <ion-icon name="git-branch-outline"></ion-icon>
+                    <ion-icon name="logo-github"></ion-icon>
+                    <ion-icon name="logo-figma"></ion-icon>
                 </div>
             </div>
         </div>
