debut de la partie skillest

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="education-cards-container">
                 <div class="education-cards-container-card">
                     <div class="education-cards-container-card-img">
-                        <img src="img/iuc.png" alt="Clirap">
+                        <img src="img/ccnb.png" alt="Clirap">
                     </div>
                     <div class="education-cards-container-card-container">
                         <h3>2021 • <i>en cours</i></h3>
@@ -200,31 +200,41 @@
             </div>
             <div class="skillest-cards-container">
                 <div class="skillest-cards-container-card">
-                    <ion-icon name="globe-outline"></ion-icon>
-                    DEVELOPPEMENT WEB
-                    <ion-icon name="logo-html5"></ion-icon>
-                    <ion-icon name="logo-css3"></ion-icon>
-                    <ion-icon name="logo-sass"></ion-icon>
-                    <ion-icon name="logo-javascript"></ion-icon>
-                    <ion-icon name="logo-react"></ion-icon>
+                    <ion-icon name="globe-outline" class="circle"></ion-icon>
+                    <p>DEVELOPPEMENT WEB</p>
+                    <div>
+                        <ion-icon name="logo-html5"></ion-icon>
+                        <ion-icon name="logo-css3"></ion-icon>
+                        <ion-icon name="logo-sass"></ion-icon>
+                        <ion-icon name="logo-javascript"></ion-icon>
+                        <ion-icon name="logo-react"></ion-icon>
+                    </div>
                 </div>
                 <div class="skillest-cards-container-card">
-                    <ion-icon name="phone-portrait-outline"></ion-icon>
-                    DEVELOPPEMENT MOBILE
-                    <ion-icon name="logo-react"></ion-icon>
-                    <ion-icon name="logo-android"></ion-icon>
+                    <ion-icon name="phone-portrait-outline" class="circle"></ion-icon>
+                    <p>DEVELOPPEMENT MOBILE</p>
+                    <div>
+                        <ion-icon name="logo-android"></ion-icon>
+                        <ion-icon name="logo-react"></ion-icon>
+                    </div>
                 </div>
                 <div class="skillest-cards-container-card">
-                    <ion-icon name="laptop-outline"></ion-icon>
-                    AUTRES SKILLS
-                    <ion-icon name="logo-python"></ion-icon>
-                    <ion-icon name="git-branch-outline"></ion-icon>
-                    <ion-icon name="logo-github"></ion-icon>
-                    <ion-icon name="logo-figma"></ion-icon>
+                    <ion-icon name="laptop-outline" class="circle"></ion-icon>
+                    <p>AUTRES SKILLS</p>
+                    <div>
+                        <ion-icon name="logo-python"></ion-icon>
+                        <ion-icon name="logo-github"></ion-icon>
+                        <ion-icon name="git-branch-outline"></ion-icon>
+                        <ion-icon name="logo-figma"></ion-icon>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        
+    </footer>
 
     <a href="#navigation" class="arrow">
         <ion-icon name="arrow-up-outline"></ion-icon>
