finalisation du footer

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="education-cards-container-card-container">
                         <h3>2020 • 2021</h3>
                         <p class="ecucation-cards-container-card-container-description">
-                            <b>B2 - LANGUE ITALIENNE</b>
+                            <b><a href="https://drive.google.com/file/d/19BSao3K4I22ht_T8neRqURQU7KzvXidO/view?usp=sharing" target="_blank">B2 - LANGUE ITALIENNE</a></b>
                             <p>Clirap Educationnal • Yaoundé</p>
                             <h4>Diplôme délivré par l' Université de Rome 3 ( en Italie )</h4>
                         </p>
@@ -182,7 +182,7 @@
                     <div class="education-cards-container-card-container">
                         <h3>2018 • 2019</h3>
                         <p class="ecucation-cards-container-card-container-description">
-                            <b>BACCALAUREAT C</b>
+                            <b><a href="https://drive.google.com/file/d/1zj25lC7wQiTWIWn_ZrDjoAzrn3VzSiiA/view?usp=sharing" target="_blank">BACCALAUREAT C</a></b>
                             <p>Lycée bilingue de Bafoussam ndiengdam • Bafoussam</p>
                             <h4>Diplôme délivré par le MINESEC</h4>
                         </p>
@@ -232,8 +232,16 @@
         </div>
     </div>
 
-    <footer class="footer">
-        
+    <footer class="footer" id="footer">
+        <div class="footer-container">
+            <h2>Vous pouvez me suivre sur les réseaux sociaux</h2>
+            <div class="footer-container-socials">
+                <a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+            </div>
+            <p> &copy; Codé par LN • 2021 </p>
+        </div>
     </footer>
 
     <a href="#navigation" class="arrow">
