finalisation de la partie other

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline"></ion-icon></a></li>
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
-            <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-            <li><a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+            <li><a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+            <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>
         </div>
         <ul class="navigation-page">
@@ -76,8 +76,8 @@
             <li><a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank"><ion-icon name="document-outline" alt="dasd"></ion-icon></a></li>
             <li><a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://github.com/ln-dev7" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
-            <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-            <li><a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+            <li><a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+            <li><a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>
     </nav>
 
@@ -196,7 +196,7 @@
         <div class="skillest-cards">
             <div class="skillest-cards-title">
                 <h1>Mes compétences</h1>
-                <h2>Ici vous verrez tout les languages et outils que j'utilise pour travailler.</h2>
+                <h2>Ici vous verrez tous les languages et outils que j'utilise pour travailler.</h2>
             </div>
             <div class="skillest-cards-container">
                 <div class="skillest-cards-container-card">
@@ -232,15 +232,34 @@
         </div>
     </div>
 
+    <div class="other">
+        <div class="other-container">
+            <div class="other-container-certification">
+                <h1>Mes certifications</h1>
+                <h2>J'ai eu à faire beaucoup de formation <a href="https://openclassrooms.com/fr/" target="_blank">OpenClassrooms</a> où j'ai acquis la majorité des bases de mes connaissances sur le web. <i>Consultez les en cliquant sur l'image :)</i> </h2>
+                <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing" target="_blank"><img src="img/oc.png" alt="Certifications OpenClassrooms"></a>
+            </div>
+            <div class="other-container-contact">
+                <h1>Contactez moi</h1>
+                <h2>Je demeure disponible à toutes discussions.</h2>
+                <div>
+                    <a href="https://wa.me/message/4NEELB2QRIGUI1" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
+                    <a href="mailto:leonelngoya@gmail.com" target="_blank"><ion-icon name="mail-open-outline"></ion-icon></a>
+                </div>
+                <a href="https://drive.google.com/file/d/1zdf7SO2UL9oRMnJVZoI-jawXxpKYBnDb/view?usp=drivesdk" target="_blank" class="other-container-cv">TELECHARGER MON CV</a>
+            </div>
+        </div>
+    </div>
+
     <footer class="footer" id="footer">
         <div class="footer-container">
             <h2>Vous pouvez me suivre sur les réseaux sociaux</h2>
             <div class="footer-container-socials">
                 <a href="https://twitter.com/ln_dev7?s=09" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
-                <a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-                <a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/ln-dev-aa8b691b6" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
             </div>
-            <p> &copy; Codé par LN • 2021 </p>
+            <p> &copy; Codé par LN • 2021 | Inspiré de <a href="https://gabrielthecode.com/" target="_blank">Gabriel The Code</a> </p>
         </div>
     </footer>
 
