ajout de id sur le .other

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </div>
     </div>
 
-    <div class="other">
+    <div class="other" id="other">
         <div class="other-container">
             <div class="other-container-certification">
                 <h1>Mes certifications</h1>
